--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "homepage": "https://NaumanJaat.github.io/DMI-Calculator",
   "dependencies": {
+    "@ionic/react": "^8.4.1",
+    "@ionic/react-router": "^8.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ionicons": "^7.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
